--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <img src="./img/datoCarrousel.png" class="d-block w-100 img-fluid img-carousel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Etiqueta de la tercera diapositiva</h5>
                         <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
@@ -236,6 +236,12 @@
             <p class="p-mapa">encontranos acá</p>
             <iframe 
                 class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <iframe 
+                class="mapa2" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="350" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <iframe 
+                class="mapa3" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         <div class="footer-derecha">
