--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styleP2.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
@@ -195,7 +195,7 @@
             <div class="footer-izquierda">
                 <p class="p-mapa">encontranos acá</p>
                 <iframe 
-                class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <iframe 
                 class="mapa2" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="350" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
