--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
             </div>
         <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/plagaOruga.png" class="d-block w-100 img-fluid img-carousel" alt=...">
+                    <img src="./img/plagaOruga.png" class="d-block w-100 img-fluid img-carousel" alt="articulo sobre plagas">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>plagas</h5>
                         <p>atencion con la plaga de orugas en trigo</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/huertaEnCasa.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <img src="./img/huertaEnCasa.png" class="d-block w-100 img-fluid img-carousel" alt="articulo sobre las huertas en casa">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>huerta en casa</h5>
                         <p>todos los beneficios de tener una huerta en el patio de tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/datoCarrousel.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <img src="./img/datoCarrousel.png" class="d-block w-100 img-fluid img-carousel" alt="articulo de como germinar semillas en casa">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>frutas que podes germinar en tu casa</h5>
                         <p>algunas de las frutas faciles de germinar y cultivar en tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/compost.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <img src="./img/compost.png" class="d-block w-100 img-fluid img-carousel" alt="articulo de como hace compost en casa">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>compost casero</h5>
                         <p>como hacer tu propio compost en casa</p>
@@ -90,137 +90,137 @@
 
     <div class="grid-productos">
         <div class="card productos producto1" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="tierra abonada">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="tierra abonada para el jardin">
             <div class="card-body">
-                <h5 class="card-title">tierra abonada</h5>
+                <h5 class="card-title">tierra abonada para jardin</h5>
                 <p class="card-text">tierra abonada de alta calidad para que tus plantas se desarrollen de la mejor manera.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto2" style="width: 18rem;">
-            <img src="./img/semillasCesped.png" class="card-img-top img-productos" alt="semillas de cesped">
+            <img src="./img/tierraInterior.png" class="card-img-top img-productos" alt="tierra abonada para interior">
             <div class="card-body">
-                <h5 class="card-title">semillas de cesped</h5>
-                <p class="card-text">semilas de cesped de rapido crecimiento</p>
+                <h5 class="card-title">tierra abonada para interiores</h5>
+                <p class="card-text">tierra abonada de alta calidad para que tus plantas se desarrollen de la mejor manera.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto3" style="width: 18rem;">
-            <img src="./img/tijerasPoda.png" class="card-img-top img-productos" alt="tijeras de poda">
+            <img src="./img/tierraCactus.png" class="card-img-top img-productos" alt="tierra abonaada para cactus y suculentas">
             <div class="card-body">
-                <h5 class="card-title">tijeras de poda</h5>
-                <p class="card-text">tijeras para podar tus plantas de manera comoda y eficiente.</p>
+                <h5 class="card-title">tierra para cactus y suculentas</h5>
+                <p class="card-text">tierra abonada de alta calidad para que tus plantas se desarrollen de la mejor manera.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto4" style="width: 18rem;">
-            <img src="./img/rociador.png" class="card-img-top img-productos" alt="rociador">
+            <img src="./img/semillasCespedDeportivo.png" class="card-img-top img-productos" alt="rociador">
             <div class="card-body">
-                <h5 class="card-title">rociador</h5>
-                <p class="card-text">rociador regulable a presion de aire.</p>
+                <h5 class="card-title">semillas cesped deportivo</h5>
+                <p class="card-text">cesped para deportes.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto5" style="width: 18rem;">
-            <img src="./img/palaJardineria.png" class="card-img-top img-productos" alt="pala de jardineria">
+            <img src="./img/semillasTrebol.png" class="card-img-top img-productos" alt="pala de jardineria">
             <div class="card-body">
-                <h5 class="card-title">pala de jardineria</h5>
-                <p class="card-text">pala para tierra con punta.</p>
+                <h5 class="card-title">semillas de cesped trebol</h5>
+                <p class="card-text">cesped decorativo en forma de treboles.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto6" style="width: 18rem;">
-            <img src="./img/macetas.png" class="card-img-top img-productos" alt="maceta">
+            <img src="./img/semillasCespedJardin.png" class="card-img-top img-productos" alt="maceta">
             <div class="card-body">
-                <h5 class="card-title">maceta de 30lts</h5>
-                <p class="card-text">maceta de 30 litros con plato de drenaje</p>
+                <h5 class="card-title">semillas de cesped de jardin</h5>
+                <p class="card-text">semillas de cesped brilloso para el jardin.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto7" style="width: 18rem;">
-            <img src="./img/macetasColgante.png" class="card-img-top img-productos" alt="maceta colgante">
+            <img src="./img/macetaColgante.png" class="card-img-top img-productos" alt="maceta colgante">
             <div class="card-body">
                 <h5 class="card-title">maceta colgante</h5>
-                <p class="card-text">maceta colgante de 7 litros</p>
+                <p class="card-text">maceta colgande de fibra de coco.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
                                                                                 
         <div class="card productos producto8 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetaCuadrada.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">tierra abonada</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">maceta grande cuadrada</h5>
+                <p class="card-text">maceta de 30 litros.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto9 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetaDecorada.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">maceta de jardin</h5>
+                <p class="card-text">maceta grande de ceramica, ideal para tu jardin.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto10 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/palaJardin1.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">pala con mango plástico</h5>
+                <p class="card-text">pala de jardineria con mango plastico muy resistente.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto11 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/palaJardin2.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">pala de una sola pieza</h5>
+                <p class="card-text">pala metalica de una sola pieza.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto12 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/sacayuyos.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">vara sacayuyos</h5>
+                <p class="card-text">vara metalica para remover yuyos.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto13 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/plaguisida.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">mamboreta confi</h5>
+                <p class="card-text">combate plagas como mosca blanca, cochinillas y pulgones.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto14 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/plaguisida2.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">mamboreta H</h5>
+                <p class="card-text">combate hongos.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto15 productos-descktop" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/portaMacetas.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">porta macetas de madera</h5>
+                <p class="card-text">porta macetas alto de madera.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
