--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="asesoramiento para el mantenimiento de las plantas de tu hogar">
+    <meta name="keywords" content="productos de jardinerias, plantas, cuidados de las plantas, consultas">
         <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -13,14 +15,14 @@
 <body>
     <div class="grilla-general">
         <div class="caja-iconos"> 
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.png" alt=""></a> 
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/instagramP.png" alt=""></a>
-            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/pinterestP.png" alt=""></a>
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.png" alt="icono de whatsapp"></a> 
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/instagramP.png" alt="icono de instagram"></a>
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/pinterestP.png" alt="icono de pinterest"></a>
         </div>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
+                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="logo de la página" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
